--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     display:flex;flex-direction:column;align-items:center;gap:6px;
     box-shadow:0 6px 14px rgba(0,0,0,0.35);
     transition:transform .15s ease,opacity .2s ease;
+    user-select:none;
   }
   .team-btn:hover{transform:translateY(-3px)}
   .team-btn img{width:96px;height:96px;image-rendering:pixelated;filter:drop-shadow(0 3px 8px rgba(0,0,0,0.35))}
@@ -38,7 +39,6 @@
   .yellow{background:#facc15;color:#222}
   /* main panel */
   .panel{flex:1;min-width:320px;background:rgba(255,255,255,0.03);border-radius:12px;padding:18px;box-shadow:0 8px 24px rgba(0,0,0,0.5);color:#fff}
-  .mascot{display:block;margin:0 auto 8px;width:140px;height:140px;image-rendering:pixelated}
   .note{font-weight:700;margin:6px 0 12px;text-align:center}
   ol.missions{font-size:1.1em;line-height:1.4;margin:0 0 12px;padding-left:1.3em}
   ol.missions li{margin-bottom:1em;display:flex;align-items:center;gap:12px}
@@ -95,13 +95,9 @@
   </div>
 </div>
 
-<!-- confetti canvas lib -->
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
 <script>
-/* ---------------------------
-  Data & GIF mapping
---------------------------- */
 const TEAMS = {
   blue: {
     title: 'Blue Team',
@@ -160,7 +156,7 @@ const TEAMS = {
       "Practice your rizz with a stranger or strange thing"
     ]
   },
-  jimmy: { /* yellow theme */
+  jimmy: {
     title: 'Jimmy Team',
     color: '#facc15',
     startGif: 'https://play.pokemonshowdown.com/sprites/ani/pikachu.gif',
@@ -181,7 +177,6 @@ const TEAMS = {
   }
 };
 
-/* Secret missions (keyword -> text + gif) */
 const SECRET_MISSIONS = {
   abs:    { text: "Congrats! You’ve unlocked a secret Abdullah mission. Send a selfie to Abdullah.", gif: "https://play.pokemonshowdown.com/sprites/ani/alakazam.gif" },
   jimmy:  { text: "Nothing to congratulate, this is the free mission. Give Jimmy a dap for a free point.", gif: "https://play.pokemonshowdown.com/sprites/ani/gengar.gif" },
@@ -192,29 +187,47 @@ const SECRET_MISSIONS = {
   secret:{ text:"A bit on a nose right? Send a picture of Jimmy partaking in any Nashville festivities.", gif:"https://play.pokemonshowdown.com/sprites/ani/lapras.gif" }
 };
 
-/* ---------- helpers / state ---------- */
 const teamsCol = document.getElementById('teamsCol');
 const panelContent = document.getElementById('panelContent');
 
-const STORAGE_PREFIX = 'nbg_progress_'; // + team key
+const STORAGE_PREFIX = 'nbg_progress_'; 
 const LAST_ACTIVE = 'nbg_last_active_team';
 let activeTeam = null;
 
-/* Build team buttons initially */
+function evolutionGifForCount(teamKey, count){
+  const t = TEAMS[teamKey];
+  if(teamKey === 'jimmy'){
+    if(count >= 10 && t.evo10) return t.evo10;
+    return t.startGif;
+  } else {
+    if(count >= 10 && t.evo10) return t.evo10;
+    if(count >= 5 && t.evo5) return t.evo5;
+    return t.startGif;
+  }
+}
+
+function countChecked(arr){ return arr.filter(Boolean).length; }
+
 function buildTeamButtons(){
   teamsCol.innerHTML = '';
   for(const key of Object.keys(TEAMS)){
     const t = TEAMS[key];
+    const savedKey = STORAGE_PREFIX + key;
+    let saved = JSON.parse(localStorage.getItem(savedKey) || 'null');
+    if(!saved || !Array.isArray(saved) || saved.length !== t.missions.length){
+      saved = new Array(t.missions.length).fill(false);
+    }
+    const completedCount = countChecked(saved);
+    const evoGif = evolutionGifForCount(key, completedCount);
     const btn = document.createElement('button');
     btn.className = `team-btn ${key}`;
     btn.dataset.team = key;
-    btn.innerHTML = `<img src="${t.startGif}" alt="${t.title}"><div>${t.title}</div>`;
-    // Ensure Jimmy team button is yellow background explicitly
+    btn.innerHTML = `<img src="${evoGif}" alt="${t.title}"><div>${t.title}</div>`;
     if(key === 'jimmy'){
       btn.style.backgroundColor = t.color;
       btn.style.color = '#222';
     }
-    btn.onclick = ()=> selectTeam(key);
+    btn.onclick = () => selectTeam(key);
     btn.style.opacity = '1';
     btn.style.pointerEvents = 'auto';
     teamsCol.appendChild(btn);
@@ -222,45 +235,35 @@ function buildTeamButtons(){
 }
 buildTeamButtons();
 
-/* select a team: show only that button, change bg, render missions */
 function selectTeam(teamKey){
   activeTeam = teamKey;
   localStorage.setItem(LAST_ACTIVE, teamKey);
-  confettiBurst(220);
 
-  // keep only selected button visible and move to top
   const allBtns = Array.from(teamsCol.children);
-  const chosen = allBtns.find(b=>b.dataset.team===teamKey);
+  const chosen = allBtns.find(b => b.dataset.team === teamKey);
   teamsCol.innerHTML = '';
   teamsCol.appendChild(chosen);
 
-  // disable the button so no double clicks
   chosen.style.pointerEvents = 'none';
   chosen.style.opacity = '1';
 
-  // change page bg color (soft)
   document.body.style.backgroundColor = TEAMS[teamKey].color;
 
-  // render panel content
   renderTeamPanel(teamKey);
 }
 
-/* render the missions, checkboxes, secret box, reset & Go Back */
 function renderTeamPanel(teamKey){
   const team = TEAMS[teamKey];
   const savedKey = STORAGE_PREFIX + teamKey;
-  // load saved checked states (array of booleans)
   let saved = JSON.parse(localStorage.getItem(savedKey) || 'null');
   if(!saved || !Array.isArray(saved) || saved.length !== team.missions.length){
     saved = new Array(team.missions.length).fill(false);
   }
 
-  // create HTML
   panelContent.innerHTML = `
-    <img id="mascotGif" class="mascot" src="${evolutionGifForCount(teamKey, countChecked(saved))}" alt="${team.title} mascot">
     <div class="note">Each objective will be rated between 0-5</div>
     <ol class="missions" id="missionsList">
-      ${team.missions.map((m,i)=>`<li><input type="checkbox" class="mission-checkbox" data-i="${i}" ${saved[i] ? 'checked' : ''} /> <span>${m}</span></li>`).join('')}
+      ${team.missions.map((m,i) => `<li><input type="checkbox" class="mission-checkbox" data-i="${i}" ${saved[i] ? 'checked' : ''} /> <span>${m}</span></li>`).join('')}
     </ol>
 
     <div class="secret-box">
@@ -275,28 +278,28 @@ function renderTeamPanel(teamKey){
     </div>
   `;
 
-  // wire up checkbox events
   const missionCheckboxes = Array.from(document.querySelectorAll('.mission-checkbox'));
-  missionCheckboxes.forEach(cb=>{
-    cb.addEventListener('change', ()=>{
-      const idx = parseInt(cb.dataset.i,10);
+  missionCheckboxes.forEach(cb => {
+    cb.addEventListener('change', () => {
+      const idx = parseInt(cb.dataset.i, 10);
       saved[idx] = cb.checked;
       localStorage.setItem(savedKey, JSON.stringify(saved));
-      // update mascot based on count
-      const mg = document.getElementById('mascotGif');
-      mg.src = evolutionGifForCount(teamKey, countChecked(saved));
-      // No confetti on evolution now
+
+      // Update the button's pokemon gif with evolution
+      updateTeamButtonGif(teamKey, countChecked(saved));
     });
   });
 
-  // secret input handling
   const secretInput = document.getElementById('secretInput');
   const secretReveal = document.getElementById('secretReveal');
-  function handleSecret(){
+  function handleSecret() {
     const raw = secretInput.value.trim().toLowerCase();
-    if(!raw){ secretReveal.innerHTML = ''; return; }
+    if (!raw) {
+      secretReveal.innerHTML = '';
+      return;
+    }
     const m = SECRET_MISSIONS[raw];
-    if(m){
+    if (m) {
       secretReveal.innerHTML = `<div class="mission-reveal"><div>${m.text}</div><img src="${m.gif}" alt="secret gif"></div>`;
       confettiFanfare();
     } else {
@@ -304,37 +307,35 @@ function renderTeamPanel(teamKey){
     }
     secretInput.value = '';
   }
-  secretInput.addEventListener('keydown', e=>{
-    if(e.key === 'Enter') {
+  secretInput.addEventListener('keydown', e => {
+    if (e.key === 'Enter') {
       e.preventDefault();
       handleSecret();
     }
   });
-  // reveal button
   const secretBox = document.querySelector('.secret-box');
   const btnFetch = document.createElement('button');
-  btnFetch.className='btn';
-  btnFetch.style.background='#333'; btnFetch.style.color='#fff';
-  btnFetch.style.borderRadius='8px'; btnFetch.style.marginTop='8px';
-  btnFetch.textContent='Reveal';
+  btnFetch.className = 'btn';
+  btnFetch.style.background = '#333';
+  btnFetch.style.color = '#fff';
+  btnFetch.style.borderRadius = '8px';
+  btnFetch.style.marginTop = '8px';
+  btnFetch.textContent = 'Reveal';
   btnFetch.onclick = handleSecret;
   secretBox.appendChild(btnFetch);
 
-  // Reset button
-  document.getElementById('resetBtn').onclick = ()=>{
-    if(confirm(`Reset progress for ${team.title}?`)){
+  document.getElementById('resetBtn').onclick = () => {
+    if (confirm(`Reset progress for ${team.title}?`)) {
       localStorage.removeItem(savedKey);
-      // reset mascot to start gif
-      document.getElementById('mascotGif').src = team.startGif;
-      // uncheck all
-      missionCheckboxes.forEach(cb=> cb.checked = false);
-      // clear secret reveal
-      secretReveal.innerHTML = '';
+      buildTeamButtons();
+      panelContent.innerHTML = `<p style="opacity:.9">Choose a team from the left to view missions. Progress persists locally.</p>`;
+      document.body.style.backgroundColor = '';
+      activeTeam = null;
+      localStorage.removeItem(LAST_ACTIVE);
     }
   };
 
-  // Go back button
-  document.getElementById('goBackBtn').onclick = ()=>{
+  document.getElementById('goBackBtn').onclick = () => {
     document.body.style.backgroundColor = '';
     activeTeam = null;
     localStorage.removeItem(LAST_ACTIVE);
@@ -343,49 +344,30 @@ function renderTeamPanel(teamKey){
   };
 }
 
-/* count checked in saved array */
-function countChecked(arr){ return arr.filter(Boolean).length; }
-
-/* pick right gif based on checked count */
-function evolutionGifForCount(teamKey, count){
-  const t = TEAMS[teamKey];
-  if(teamKey === 'jimmy'){ // only evolves at 10
-    if(count >= 10 && t.evo10) return t.evo10;
-    return t.startGif;
-  } else {
-    if(count >= 10 && t.evo10) return t.evo10;
-    if(count >= 5 && t.evo5) return t.evo5;
-    return t.startGif;
+function updateTeamButtonGif(teamKey, count){
+  const allBtns = Array.from(teamsCol.children);
+  const btn = allBtns.find(b => b.dataset.team === teamKey);
+  if(!btn) return;
+  const newGif = evolutionGifForCount(teamKey, count);
+  // Replace img src inside the button
+  const img = btn.querySelector('img');
+  if(img.src !== newGif){
+    img.src = newGif;
   }
 }
 
-/* confetti helpers */
-function confettiBurst(p=200){
-  const colors = ['#f59e0b','#ef4444','#3b82f6','#22c55e','#facc15'];
-  for(let i=0; i<3; i++){
-    confetti({
-      particleCount: Math.floor(p/3),
-      spread: 70 + i*10,
-      origin: { x: Math.random(), y: Math.random() * 0.6 + 0.3 },
-      colors: colors,
-      scalar: 1.2
-    });
-  }
-}
-function confettiFanfare(){
-  // multiple bursts with varied size and spread for fanfare
-  confetti({ particleCount: 150, spread: 120, startVelocity: 40, ticks: 600, gravity: 0.4, origin: { x: 0.2, y: 0.4 }, colors:['#ef4444','#facc15','#3b82f6','#22c55e','#a855f7'] });
-  confetti({ particleCount: 150, spread: 100, startVelocity: 45, ticks: 500, gravity: 0.5, origin: { x: 0.8, y: 0.4 }, colors:['#facc15','#ef4444','#3b82f6','#22c55e','#a855f7'] });
-  confetti({ particleCount: 250, spread: 160, startVelocity: 55, ticks: 700, gravity: 0.45, origin: { x: 0.5, y: 0.3 }, colors:['#22c55e','#3b82f6','#ef4444','#facc15','#a855f7'] });
-}
-
-/* on page load, restore last active team if any */
 window.onload = () => {
   const last = localStorage.getItem(LAST_ACTIVE);
   if(last && TEAMS[last]){
     selectTeam(last);
   }
 };
+  
+function confettiFanfare(){
+  confetti({ particleCount: 150, spread: 120, startVelocity: 40, ticks: 600, gravity: 0.4, origin: { x: 0.2, y: 0.4 }, colors:['#ef4444','#facc15','#3b82f6','#22c55e','#a855f7'] });
+  confetti({ particleCount: 150, spread: 100, startVelocity: 45, ticks: 500, gravity: 0.5, origin: { x: 0.8, y: 0.4 }, colors:['#facc15','#ef4444','#3b82f6','#22c55e','#a855f7'] });
+  confetti({ particleCount: 250, spread: 160, startVelocity: 55, ticks: 700, gravity: 0.45, origin: { x: 0.5, y: 0.3 }, colors:['#22c55e','#3b82f6','#ef4444','#facc15','#a855f7'] });
+}
 </script>
 </body>
 </html>
